Do some readability fixes
- Combat font rendering with some stroke magic
- Larger font size and wider content area for 2k screens and up

--- a/sass/_helpers.scss
+++ b/sass/_helpers.scss
@@ -16,5 +16,9 @@
         @media screen and (min-width: 1024px) {
             @content;
         }
+    } @else if ($bp == large_desktop) {
+        @media screen and (min-width: 1921px) {
+            @content;
+        }
     }
 }
