--- a/sass/_singular.scss
+++ b/sass/_singular.scss
@@ -19,14 +19,44 @@
             margin: 2em 0;
         }
 
-	.caption {
-		p {
-			font-size: 85%;
-			font-style: italic;
-			padding: 1ex 0;
-			text-align: right;
-		}
-	}
+        .caption {
+            p {
+                font-size: 85%;
+                font-style: italic;
+                padding: 1ex 0;
+                text-align: right;
+            }
+        }
+
+        .notice {
+            margin-top: 2.5em;
+            position: relative;
+            padding: 1.5em 1.75em 1.25em 1.75em;
+            font-size: 90%;
+            background-color: mix($light_blue, $dark_blue, 33%);
+            box-shadow: 0.3rem 0.3rem 0 0 rgba(0, 0, 0, 0.125);
+
+            & > * + * {
+                margin-top: 1.75em;
+            }
+
+            &::before {
+                content: 'i';
+                display: block;
+                position: absolute;
+                width: 3rem;
+                height: 3rem;
+                top: -1.5rem;
+                left: -1.5rem;
+                background-color: $yellow;
+                color: $dark_blue;
+                font-weight: 900;
+                text-align: center;
+                line-height: 3.2rem;
+                font-size: 2rem;
+                font-family: $font_mono;
+            }
+        }
 
         article {
             color: mix($dark_blue, white, 12.5%);
