--- a/sass/_type.scss
+++ b/sass/_type.scss
@@ -2,6 +2,10 @@
 // _type.scss
 //
 
+body {
+    -webkit-text-stroke: 0.1px;
+}
+
 h1, h2, h3, h4, h5 {
     line-height: 1.1;
 }
